Исправления базовых критериев

--- a/catalog.html
+++ b/catalog.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
     <title>Каталог Техномарта</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i&PT+Sans&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
@@ -24,7 +24,7 @@
           <div class="link cart full">
             <a href="#">Корзина: 10</a>
           </div>
-          <button class="make-order">Оформить заказ</button>
+          <a class="make-order">Оформить заказ</a>
         </div> 
       </div>
       <div class="bottom-menu">
@@ -67,7 +67,7 @@
             <li><a class="home" href="index.html"></a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Инструмент</a></li>
-            <li><a href="#">Перфораторы</a></li>
+            <li>Перфораторы</li>
           </ul>
         </div>
         <div class="catalog-current-page">
@@ -149,7 +149,7 @@
               <ul>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3>Перфоратор BOSCH BFG 3000</h3>
                   <span class="past-price">22500 Р.</span>
@@ -161,7 +161,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
+                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3>Перфоратор BOSCH BFG 6000</h3>
                   <span class="past-price">30500 Р.</span>
@@ -173,7 +173,7 @@
                 </li>
                 <li class="new">
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                    <img src="img/catalog-item-3.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
@@ -184,7 +184,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3>Перфоратор BOSCH BFG 3000</h3>
                   <span class="past-price">22500 Р.</span>
@@ -196,7 +196,7 @@
                 </li>
                 <li class="new">
                   <div class="item-img">
-                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
+                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3>Перфоратор BOSCH BFG 6000</h3>
                   <span class="past-price">30500 Р.</span>
@@ -208,7 +208,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                    <img src="img/catalog-item-3.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
@@ -219,7 +219,7 @@
                 </li>
                 <li class="new">
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3>Перфоратор BOSCH BFG 3000</h3>
                   <span class="past-price">22500 Р.</span>
@@ -231,7 +231,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
+                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3>Перфоратор BOSCH BFG 6000</h3>
                   <span class="past-price">30500 Р.</span>
@@ -243,7 +243,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                    <img src="img/catalog-item-3.jpg" alt="Фото перфоратора" width="218" height="165">
                   </div>
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
