--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
     <title>Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i&PT+Sans&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
@@ -12,7 +12,7 @@
     <header class="main-header">
       <div class="top-menu">
         <div class="container">
-          <a class="main-header-logo" href="index.html">Техномарт</a>
+          <a class="main-header-logo" href="#">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search">Поиск по сайту</label>
             <input type="search" name="search" id="search" placeholder="Поиск:">
@@ -24,7 +24,7 @@
           <div class="cart">
             <a href="#">Корзина: 0</a>
           </div>
-          <button class="make-order">Оформить заказ</button>
+          <a class="make-order">Оформить заказ</a>
         </div> 
       </div>
       <div class="bottom-menu">
@@ -89,7 +89,7 @@
               <div class="slide slide1">
                 <div class="slide-content">
                   <h3>Дрели</h3>
-                  <p>Соседям в радость!</p>
+                  <p>Соседям на радость!</p>
                   <a class="link" href="#">Открыть каталог</a>
                 </div>
               </div>
@@ -121,7 +121,7 @@
           <ul>
             <li>
               <div class="item-img">
-              <img src="img/popular-1.jpg" alt="Фото перфоратора" width="146" height="86">
+                <img src="img/popular-1.jpg" alt="Фото перфоратора" width="218" height="165">
               </div>
               <h3>Перфоратор BOSCH BFG 9000</h3>
               <span class="past-price">32500 Р.</span>
@@ -133,7 +133,7 @@
             </li>
             <li>
               <div class="item-img">
-              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="185" height="84">
+                <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="218" height="165">
               </div>
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="past-price">22500 Р.</span>
@@ -145,7 +145,7 @@
             </li>    
             <li>
               <div class="item-img">
-              <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
+                <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="218" height="165">
               </div>
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="past-price">30500 Р.</span>
@@ -157,7 +157,7 @@
             </li>   
             <li class="new-drill new">
               <div class="item-img">
-              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
+                <img src="img/catalog-item-3.jpg" alt="Фото перфоратора" width="218" height="165">
               </div>
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="actual-price">12500 Р.</span>
