--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <div class="top-menu">
         <div class="container">
-          <a class="main-header-logo" href="#">Техномарт</a>
+          <a class="main-header-logo">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search">Поиск по сайту</label>
             <input type="search" name="search" id="search" placeholder="Поиск:">
@@ -175,35 +175,35 @@
           </div>
           <ul class="brands-list">
             <li>
-              <a href="#"><img src="img/bosch.jpg" alt="Bosch" width="126" height="37"></a>
+              <a href="#"><img src="img/bosch.jpg" alt="Bosch" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/makita.jpg" alt="Makita" width="123" height="40"></a>
+              <a href="#"><img src="img/makita.jpg" alt="Makita" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/dewalt.jpg" alt="DeWALT" width="146" height="44"></a>
+              <a href="#"><img src="img/dewalt.jpg" alt="DeWALT" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/interskol.jpg" alt="Интерскол" width="178" height="28"></a>
+              <a href="#"><img src="img/interskol.jpg" alt="Интерскол" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/hitachi.jpg" alt="Hitachi" width="146" height="22"></a>
+              <a href="#"><img src="img/hitachi.jpg" alt="Hitachi" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/lg.jpg" alt="LG" width="121" height="73"></a>
+              <a href="#"><img src="img/lg.jpg" alt="LG" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions" width="151" height="96"></a>
+              <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions" width="218" height="143"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play." width="158" height="59"></a>
+              <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play." width="218" height="143"></a>
             </li>
           </ul>
         </section>
       </div>
       
-        <section class="services">
-          <div class="container">
+      <section class="services">
+        <div class="container">
           <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="slider-services">          
@@ -225,7 +225,7 @@
               <div class="slider-content-list">
                 <div class="slider-content-item slider-content-2">
                   <h3>Гарантия</h3>
-                  <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь   сами.</p>
+                  <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом   увосстановите как-нибудь   сами.</p>
                 </div>
               </div>
               <div class="slider-content-list">
@@ -238,8 +238,7 @@
             </div>
           </div>
         </div>  
-        </section>
-      
+      </section>
       <div class="container">
         <section class="about">
           <h2 class="visually-hidden">О компании</h2>
@@ -257,7 +256,7 @@
           <div class="about-contacts">
             <h3>Контакты</h3>
             <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
-            <a class="map map-link" href="https://echo.htmlacademy.ru"><img src="img/map.jpg" alt="Посмотреть наше местоположение" width="300" height="158"></a>          
+            <a class="map map-link" href="https://goo.gl/maps/k5o2NMFUCyv"><img src="img/map.jpg" alt="Посмотреть наше местоположение" width="300" height="158"></a>          
             <a class="link feedback-link" href="https://echo.htmlacademy.ru">Заблудились? Напишите нам!</a>
           </div>
         </section>
@@ -293,9 +292,9 @@
           Все права защищены</p>
           <div class="social">
             <ul>
-              <li><div class="vk"><a href="#">Вконтакте</a></div></li>
-              <li><div class="fb"><a href="#">Facebook</a></div></li>
-              <li><div class="insta"><a href="#">Instagram</a></div></li>
+              <li><a href="#" class="vk">Вконтакте</a></li>
+              <li><a href="#" class="fb">Facebook</a></li>
+              <li><a href="#" class="insta">Instagram</a></li>
             </ul>
           </div>
           <div class="developer">
@@ -333,6 +332,7 @@
     </section>
     <section class="modal modal-map">
       <h2 class="visually-hidden">Карта</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1537162271723" width="940" height="446" allowfullscreen></iframe>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
     <section class="modal modal-cart">
