Исправления дополнительных критериев

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <form class="search-form" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search">Поиск по сайту</label>
             <input type="search" name="search" id="search" placeholder="Поиск:">
-            <input type="submit" value="Найти">
+            <input type="submit" class="search-field" value="Найти">
           </form>
           <div class="bookmark">
             <a href="#">Закладки: 0</a>
