Коррекция шрифтов, доступности

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="cart">
             <a href="#">Корзина: 0</a>
           </div>
-          <a class="make-order">Оформить заказ</a>
+          <a class="make-order" href="#">Оформить заказ</a>
         </div> 
       </div>
       <div class="bottom-menu">
