--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
           <div class="link cart full">
             <a href="#">Корзина: 10</a>
           </div>
-          <a class="make-order">Оформить заказ</a>
+          <a class="make-order" href="#">Оформить заказ</a>
         </div> 
       </div>
       <div class="bottom-menu">
