Исправление логотипа в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   	<header class="main-header">
       <div class="top-menu">
         <div class="container">
-          <a class="main-header-logo" href="index.html">Техномарт</a>
+          <a class="main-header-logo catalog-header-logo" href="index.html">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search">Поиск по сайту</label>
             <input type="search" name="search" id="search" placeholder="Поиск:">
